Changes
=======

1.0.12 (TBD)
------------

- The copy and copyfiles functions of rasterio.shutil now raise an exception
  when the source and destination paths identify the same dataset (#1569).

1.0.11 (2019-11-30)
-------------------

- Prevent needless warning when making boundless reads with a fill value
  (#1499).
- The GDAL band cache is flushed at the top of build_overviews to fix #1497.
- Options --gdal-data and --proj-data have been added to the rio-env command so
  that users of Rasterio wheels can get paths to set GDAL_DATA and PROJ_LIB
  environment variables.
- The attempt to make GDAL and PROJ support file discovery and configuration
  automatic within methods of the CRS class has been reverted. Users must
  execute such code inside a `with Env()` block or set the GDAL_DATA and
  PROJ_LIB environment variables needed by GDAL.

1.0.10 (2019-11-16)
-------------------

- Avoid segmentation fault when OSRGetAuthority* functions return null
  pointers, making Rasterio more robust when reading CRS that don't map
  perfectly to PROJ.
- Ensure that GDAL and PROJ support files can be found in Rasterio wheels when
  we call CRS methods (#1539).
- Accomodate the Esri flavor of projection WKT (#1537).
- Add missing raster offsets and scales properties (#1527).

1.0.9 (2019-10-25)
------------------

Bug fixes:

- Delegate test of the environment for existing session credentials to the
  session class to generalize credentialization of GDAL to cloud providers
  other than AWS (#1520). The env.hascreds function is no longer used in
  Rasterio and has been marked as deprecated.
- Switch to use of botocore Credentials.get_frozen_credentials (#1521).
- Numpy masked arrays with the normal Numpy mask sense (True == invalid) are
  now supported as input for feature.shapes(). The mask keyword argument of the
  function keeps to the GDAL sense of masks (nonzero == invalid) and the
  documentation has been improved to communicate this (#1517).